--- a/book.tex
+++ b/book.tex
@@ -77,7 +77,7 @@
 \fenicsinput{mortensen}
 %\input{unfinished/hoffman-1/chapter.tex}
 %%%\fenicsinput{hoffman-1}
-%%%\fenicsinput{selim}
+\fenicsinput{selim}
 %%%\fenicsinput{shan}
 \fenicsinput{lopes}
 \fenicsinput{kvs-2}
