--- a/TODO
+++ b/TODO
@@ -39,3 +39,7 @@ Things to discuss
 * Use \toprule, \midrule, \bottomrule in tables
 * Should there be , after and?
 * foo or foo() in text when referring to functions?
+* Common handling of www:foo references: author name or no author
+  name. Looks strange when two packages are referenced together
+  and one of them is written as the name of the package and the other
+  the name of the author.
