Figure updates to [langtangen]

--- a/book.tex
+++ b/book.tex
@@ -40,7 +40,7 @@
 %------------------------------------------------------------------------------
 
 % Use to test individual chapter
-%\fenicsinput{foo}\end{fullwidth}\end{document}
+%\fenicsinput{langtangen}\end{fullwidth}\end{document}
 
 \input{chapters/intro/chapter.tex}
 \fenicsinput{langtangen}
